--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,7 @@ nav {
     color: #d80548;
 }
 
-#sidemenu{
+#sidemenu {
     margin-top: 16px;
 }
 
@@ -146,7 +146,7 @@ nav ul li a:hover::after {
 }
 
 .about-3 {
-    max-width: 850px;
+    max-width: 830px;
     margin: 50px auto 0 auto;
     padding: 30px;
     background: #111;
@@ -171,6 +171,7 @@ nav ul li a:hover::after {
 
 #experience li {
     margin-bottom: 25px;
+    line-height: 1.3;
 }
 
 
@@ -322,8 +323,8 @@ nav ul li a:hover::after {
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-    text-align: center; 
-    padding: 50px 20px 80px; 
+    text-align: center;
+    padding: 50px 20px 80px;
 }
 
 
@@ -356,7 +357,6 @@ nav ul li a:hover::after {
     width: 100%;
     display: block;
     border-radius: 10px;
-    transition: transform 0.5s;
 }
 
 
@@ -376,6 +376,7 @@ nav ul li a:hover::after {
     text-decoration: none;
     color: #fff;
     transition: background 0.5s;
+    font-size: 18px;
 }
 
 .see_more:hover {
@@ -483,7 +484,7 @@ form textarea {
 
 #footer {
     width: 100%;
-    padding: 40px 0;
+    padding: 40px 5px;
     margin-top: 50px;
     text-align: center;
     font-size: 15px;
@@ -499,25 +500,34 @@ nav .fa-solid {
     display: none;
 }
 
+
+
+
 /*-- ---------------css responsive for small screen------------------- */
 
-@media only screen and (max-width:600px) {
-
+/* mobile phone */
+@media (max-width: 576px) {
     #header {
         background-image: url(images/background.jpg);
     }
 
-    .header-text p {
-        margin-top: 100%;
-        font-size: 20px;
+    .header-text {
+        margin-bottom: 20%;
     }
 
+
+    .header-text p {
+        font-size: 20px;
+        margin-bottom: 25px;
+    }
+
+
     .header-text h1 {
-        font-size: 30px;
+        font-size: 23px;
     }
 
     .logo {
-        width: 120px;
+        width: 20px;
     }
 
     nav ul {
@@ -537,9 +547,6 @@ nav .fa-solid {
         margin: 15px 20px;
     }
 
-    nav div i {
-        cursor: pointer;
-    }
 
     nav ul li a {
         font-size: 14px;
@@ -565,17 +572,18 @@ nav .fa-solid {
     }
 
     .sub-title {
-        margin: 40px 0px 10px 0px;
         font-size: 30px;
-        font-weight: 400;
-        color: #ff004f;
         margin-bottom: 20px;
     }
 
+    .about-2 {
+        margin-top: 30px;
+    }
+
+
     .about-2 p {
-        font-size: 15px;
-        font-weight: 200;
-        margin-top: 18px;
+        font-size: 17px;
+        margin-top: 15px;
     }
 
     .about-1,
@@ -603,6 +611,7 @@ nav .fa-solid {
         padding: 12px 20px;
         text-align: center;
         margin: 30px 0px;
+        margin: 0px auto;
     }
 
 
@@ -621,26 +630,206 @@ nav .fa-solid {
 }
 
 
+/* small tablets */
+@media (max-width: 768px) {
+    #header {
+        background-image: url(images/background.jpg);
+    }
 
-@media only screen and (max-width: 1115px) {
-
-    .row {
-        gap: 40px;
+    .header-text {
+        margin-top: 20%;
     }
 
 
-    .about-1 {
-        flex: 1;
-        min-width: 280px;
+    .header-text p {
+        font-size: 25px;
+        margin-bottom: 25px;
+    }
+
+
+    .header-text h1 {
+        font-size: 27px;
+    }
+
+    .logo {
+        width: 20px;
+    }
+
+    nav ul {
+        position: fixed;
+        right: -200px;
+        top: 0;
+        height: 100vh;
+        background: #d80548;
+        width: 200px;
+        padding-top: 50px;
+        z-index: 2;
+        transition: right 0.5s;
+    }
+
+    nav ul li {
+        display: block;
+        margin: 15px 20px;
+    }
+
+
+    nav ul li a {
+        font-size: 14px;
+    }
+
+    nav ul .fa-solid {
+        position: absolute;
+        top: 20px;
+        left: 25px;
+        cursor: pointer;
+    }
+
+    nav .fa-solid {
+        display: block;
+        font-size: 25px;
+        cursor: pointer;
+    }
+
+    .row {
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+    }
+
+    .sub-title {
+        margin: 40px 0px 10px 0px;
+        font-size: 42px;
+        font-weight: 400;
+        color: #ff004f;
+        margin-bottom: 20px;
     }
 
     .about-2 {
-        flex: 1.5;
-        min-width: 300px;
+        margin-top: 30px;
     }
 
+
     .about-2 p {
-        max-width: 100%;
+        font-size: 20px;
+        font-weight: 200;
+        margin-top: 15px;
+    }
+
+    .about-1,
+    .about-2 {
+        flex-basis: 100%;
+    }
+
+    .about-1 img {
+        border-radius: 15px;
+        margin: auto;
+    }
+
+    .about-links {
+        font-size: 18px;
+    }
+
+    .service-item h2 {
+        font-size: 36px;
+        line-height: 1.5;
+    }
+
+    .service-item p {
+        font-size: 17px;
+        line-height: 1.5;
+    }
+
+    .service-item a {
+        font-size: 15px;
+    }
+
+    .left,
+    .right {
+        flex-basis: 100%;
+    }
+
+    .left {
+        margin-bottom: 50px;
+    }
+
+
+    .layer {
+        padding: 30px 20px 80px;
+    }
+
+    .layer a {
+        bottom: 5%;
+    }
+
+    .layer p {
+        font-size: 14px;
+    }
+
+
+    .btn1 {
+        display: block;
+        width: 50%;
+        padding: 12px 20px;
+        text-align: center;
+        margin: 30px 0px;
+        margin: 0px auto;
+        font-size: 18px;
+    }
+
+
+    .btn2 {
+        display: block;
+        width: 50%;
+        text-align: center;
+        padding: 12px 20px;
+        font-size: 18px;
+        margin: 40px auto;
+    }
+
+    #footer {
+        font-size: 16px;
+    }
+}
+
+
+
+
+/*tablets */
+@media (max-width: 992px) {
+    #header {
+        background-image: url(images/background.jpg);
+    }
+
+    .header-text {
+        margin-top: 20%;
+    }
+
+
+    .header-text p {
+        font-size: 25px;
+        margin-bottom: 25px;
+    }
+
+
+    .header-text h1 {
+        font-size: 27px;
+    }
+
+    .sub-title {
+        font-size: 30px;
+    }
+
+    .left {
+        flex-basis: 35%;
+    }
+
+    .right {
+        flex-basis: 57%;
+    }
+
+    .btn1 {
+        font-size: 14px;
+        width: 60%;
     }
 
 }
