--- a/styles.css
+++ b/styles.css
@@ -75,10 +75,7 @@ nav ul li a:hover::after {
 }
 
 
-.header-text {
-    margin-top: 20%;
-    width: 60%;
-}
+
 
 .header-text p {
     font-size: 37px;
@@ -507,27 +504,24 @@ nav .fa-solid {
 
 /* mobile phone */
 @media (max-width: 576px) {
-    #header {
-        background-image: url(images/background.jpg);
+
+
+    .logo {
+        font-size: 30px;
+        padding: 8px;
     }
 
     .header-text {
-        margin-bottom: 20%;
+        margin-top: 280px;
     }
-
 
     .header-text p {
         font-size: 20px;
-        margin-bottom: 25px;
+        margin-bottom: 20px;
     }
-
 
     .header-text h1 {
-        font-size: 23px;
-    }
-
-    .logo {
-        width: 20px;
+        font-size: 25px;
     }
 
     nav ul {
@@ -565,271 +559,51 @@ nav .fa-solid {
         cursor: pointer;
     }
 
-    .row {
-        display: flex;
-        justify-content: space-between;
-        flex-wrap: wrap;
-    }
-
     .sub-title {
         font-size: 30px;
         margin-bottom: 20px;
     }
 
+    .row {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .about-1 {
+        width: 90%;
+        margin: 20px auto 30px auto;
+    }
+
     .about-2 {
-        margin-top: 30px;
-    }
-
-
-    .about-2 p {
-        font-size: 17px;
-        margin-top: 15px;
-    }
-
-    .about-1,
-    .about-2 {
-        flex-basis: 100%;
-    }
-
-    .about-1 img {
-        width: 100%;
-        border-radius: 15px;
+        width: 90%;
+        margin: 20px auto 30px auto;
     }
 
     .about-links {
         font-size: 16px;
     }
 
-    .left,
-    .right {
-        flex-basis: 100%;
-    }
-
-    .btn1 {
-        display: block;
-        width: 50%;
-        padding: 12px 20px;
-        text-align: center;
-        margin: 30px 0px;
-        margin: 0px auto;
-    }
-
-
-    .btn2 {
-        display: block;
-        width: 50%;
-        text-align: center;
-        padding: 12px 20px;
-        font-size: 16px;
-        margin: 40px auto;
-    }
-
-    #footer {
-        font-size: 14px;
-    }
-}
-
-
-/* small tablets */
-@media (max-width: 768px) {
-    #header {
-        background-image: url(images/background.jpg);
-    }
-
-    .header-text {
-        margin-top: 20%;
-    }
-
-
-    .header-text p {
-        font-size: 25px;
-        margin-bottom: 25px;
-    }
-
-
-    .header-text h1 {
-        font-size: 27px;
-    }
-
-    .logo {
-        width: 20px;
-    }
-
-    nav ul {
-        position: fixed;
-        right: -200px;
-        top: 0;
-        height: 100vh;
-        background: #d80548;
-        width: 200px;
-        padding-top: 50px;
-        z-index: 2;
-        transition: right 0.5s;
-    }
-
-    nav ul li {
-        display: block;
-        margin: 15px 20px;
-    }
-
-
-    nav ul li a {
-        font-size: 14px;
-    }
-
-    nav ul .fa-solid {
-        position: absolute;
-        top: 20px;
-        left: 25px;
-        cursor: pointer;
-    }
-
-    nav .fa-solid {
-        display: block;
-        font-size: 25px;
-        cursor: pointer;
-    }
-
-    .row {
+    .work-list {
         display: flex;
-        justify-content: space-between;
-        flex-wrap: wrap;
+        flex-direction: column;
     }
 
-    .sub-title {
-        margin: 40px 0px 10px 0px;
-        font-size: 42px;
-        font-weight: 400;
-        color: #ff004f;
-        margin-bottom: 20px;
-    }
-
-    .about-2 {
-        margin-top: 30px;
+    .work-item {
+        width: 70%;
+        margin: 20px auto 30px auto;
     }
 
 
-    .about-2 p {
-        font-size: 20px;
-        font-weight: 200;
-        margin-top: 15px;
-    }
 
-    .about-1,
-    .about-2 {
-        flex-basis: 100%;
-    }
-
-    .about-1 img {
-        border-radius: 15px;
-        margin: auto;
-    }
-
-    .about-links {
-        font-size: 18px;
-    }
-
-    .service-item h2 {
-        font-size: 36px;
-        line-height: 1.5;
-    }
-
-    .service-item p {
-        font-size: 17px;
-        line-height: 1.5;
-    }
-
-    .service-item a {
-        font-size: 15px;
-    }
-
-    .left,
-    .right {
-        flex-basis: 100%;
-    }
-
-    .left {
-        margin-bottom: 50px;
-    }
-
-
-    .layer {
-        padding: 30px 20px 80px;
-    }
-
-    .layer a {
-        bottom: 5%;
-    }
-
-    .layer p {
-        font-size: 14px;
-    }
-
-
-    .btn1 {
-        display: block;
-        width: 50%;
-        padding: 12px 20px;
+    .btn2,.btn1 {
+        width: 40%;
         text-align: center;
-        margin: 30px 0px;
-        margin: 0px auto;
-        font-size: 18px;
-    }
-
-
-    .btn2 {
-        display: block;
-        width: 50%;
-        text-align: center;
-        padding: 12px 20px;
-        font-size: 18px;
-        margin: 40px auto;
+        padding: 12px 10px;
+        font-size: 16px;
+        margin: 20px auto 50px auto;
     }
 
     #footer {
-        font-size: 16px;
-    }
-}
-
-
-
-
-/*tablets */
-@media (max-width: 992px) {
-    #header {
-        background-image: url(images/background.jpg);
-    }
-
-    .header-text {
-        margin-top: 20%;
-    }
-
-
-    .header-text p {
-        font-size: 25px;
-        margin-bottom: 25px;
-    }
-
-
-    .header-text h1 {
-        font-size: 27px;
-    }
-
-    .sub-title {
-        font-size: 30px;
-    }
-
-    .left {
-        flex-basis: 35%;
-    }
-
-    .right {
-        flex-basis: 57%;
-    }
-
-    .btn1 {
         font-size: 14px;
-        width: 60%;
     }
-
 }
