--- a/styles.css
+++ b/styles.css
@@ -512,7 +512,7 @@ nav .fa-solid {
     }
 
     .header-text {
-        margin-top: 320px;
+        margin-top: 280px;
     }
 
     .header-text p {
@@ -584,7 +584,27 @@ nav .fa-solid {
     }
 
     .about-links {
+        font-size: 18px;
+    }
+
+    .skill-type {
         font-size: 16px;
+    }
+
+    .skill-details {
+        font-size: 14px;
+    }
+
+    .experience-title {
+        font-size: 16px;
+    }
+
+    .edu-year {
+        font-size: 18px;
+    }
+
+    .edu-school {
+        font-size: 17px;
     }
 
     .work-list {
@@ -599,8 +619,291 @@ nav .fa-solid {
 
 
 
-    .btn2,.btn1 {
+    .btn2,
+    .btn1 {
         width: 50%;
+        text-align: center;
+        padding: 12px 10px;
+        font-size: 16px;
+        margin: 20px auto 50px auto;
+    }
+
+    #footer {
+        font-size: 14px;
+    }
+}
+
+
+
+/* small tablet */
+@media (max-width: 768px) {
+
+
+    .logo {
+        font-size: 30px;
+        padding: 8px;
+    }
+
+    .header-text {
+        margin-top: 320px;
+    }
+
+    .header-text p {
+        font-size: 23px;
+        margin-bottom: 20px;
+    }
+
+    .header-text h1 {
+        font-size: 28px;
+    }
+
+    nav ul {
+        position: fixed;
+        right: -200px;
+        top: 0;
+        height: 100vh;
+        background: #d80548;
+        width: 200px;
+        padding-top: 50px;
+        z-index: 2;
+        transition: right 0.5s;
+    }
+
+    nav {
+        margin-top: 10px;
+    }
+
+    nav ul li {
+        display: block;
+        margin: 15px 20px;
+    }
+
+
+    nav ul li a {
+        font-size: 14px;
+    }
+
+    nav ul .fa-solid {
+        position: absolute;
+        top: 20px;
+        left: 25px;
+        cursor: pointer;
+    }
+
+    nav .fa-solid {
+        display: block;
+        font-size: 25px;
+        cursor: pointer;
+    }
+
+    .sub-title {
+        font-size: 34px;
+        margin-bottom: 20px;
+    }
+
+    .row {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .about-1 {
+        width: 90%;
+        margin: 20px auto 30px auto;
+    }
+
+    .about-2 {
+        width: 90%;
+        margin: 20px auto 30px auto;
+    }
+
+    .about-links {
+        font-size: 21px;
+    }
+
+    .skill-type {
+        font-size: 19px;
+    }
+
+    .skill-details {
+        font-size: 17px;
+    }
+
+    .experience-title {
+        font-size: 21px;
+    }
+
+    .edu-year {
+        font-size: 21px;
+    }
+
+    .edu-school {
+        font-size: 19px;
+    }
+
+    .work-list {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .work-item {
+        width: 80%;
+        margin: 20px auto 30px auto;
+    }
+
+
+
+    .btn2,
+    .btn1 {
+        width: 35%;
+        text-align: center;
+        padding: 12px 10px;
+        font-size: 16px;
+        margin: 20px auto 50px auto;
+    }
+
+    #footer {
+        font-size: 14px;
+    }
+}
+
+
+
+/* big tablet */
+@media (max-width: 992px) {
+
+
+    .container {
+        padding: 0px 8%;
+    }
+    .logo {
+        font-size: 30px;
+        padding: 8px;
+    }
+
+    .header-text {
+        margin-top: 320px;
+    }
+
+    .header-text p {
+        font-size: 23px;
+        margin-bottom: 20px;
+    }
+
+    .header-text h1 {
+        font-size: 28px;
+    }
+
+
+    nav {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        flex-wrap: wrap;
+    }
+
+    .logo {
+        font-size: 32px;
+        padding: 8px;
+    }
+
+    .logo .logo_M {
+        color: #d80548;
+    }
+
+    #sidemenu {
+        margin-top: 16px;
+    }
+
+    nav ul li {
+        display: inline-block;
+        list-style: none;
+        margin: 8px 8px;
+    }
+
+    nav ul li a {
+        color: #fff;
+        text-decoration: none;
+        font-size: 17px;
+        position: relative;
+    }
+
+    nav ul li a::after {
+        content: '';
+        width: 0;
+        height: 3px;
+        position: absolute;
+        left: 0;
+        background: #d80548;
+        bottom: -6px;
+        transition: 0.5s;
+    }
+
+    nav ul li a:hover::after {
+        width: 100%;
+    }
+
+
+
+
+    .sub-title {
+        font-size: 34px;
+        margin-bottom: 20px;
+    }
+
+    .row {
+        display: flex;
+        flex-direction: row;
+    }
+
+    .about-1 {
+        width: 90%;
+        margin: 20px auto 30px auto;
+    }
+
+    .about-2 {
+        width: 90%;
+        margin: 20px auto 30px auto;
+    }
+
+    .about-links {
+        font-size: 21px;
+    }
+
+    .skill-type {
+        font-size: 19px;
+    }
+
+    .skill-details {
+        font-size: 17px;
+    }
+
+    .experience-title {
+        font-size: 21px;
+    }
+
+    .edu-year {
+        font-size: 21px;
+    }
+
+    .edu-school {
+        font-size: 19px;
+    }
+
+    .work-list {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .work-item {
+        width: 80%;
+        margin: 20px auto 30px auto;
+    }
+
+
+
+    .btn2,
+    .btn1 {
+        width: 35%;
         text-align: center;
         padding: 12px 10px;
         font-size: 16px;
