--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ body {
 }
 
 .container {
-    padding: 0px 10%;
+    padding: 0px 8%;
 }
 
 nav {
@@ -49,7 +49,7 @@ nav {
 nav ul li {
     display: inline-block;
     list-style: none;
-    margin: 10px 20px;
+    margin: 10px 15px;
 }
 
 nav ul li a {
@@ -74,7 +74,10 @@ nav ul li a:hover::after {
     width: 100%;
 }
 
-
+.header-text {
+    margin-top: 350px;
+    width: 90%;
+}
 
 
 .header-text p {
@@ -118,7 +121,7 @@ nav ul li a:hover::after {
     font-weight: 600;
     color: #d80548;
     text-align: center;
-    margin-bottom: 40px;
+    margin-bottom: 30px;
 }
 
 .about-1 {
@@ -150,46 +153,6 @@ nav ul li a:hover::after {
     border-radius: 12px;
     border: 1px solid #222;
 }
-
-#skills li {
-    margin-bottom: 20px;
-}
-
-.skill-type {
-    display: block;
-    color: #ff004f;
-    margin-bottom: 5px;
-}
-
-.experience-title {
-    display: block;
-    margin-bottom: 5px;
-}
-
-#experience li {
-    margin-bottom: 25px;
-    line-height: 1.3;
-}
-
-
-#education li {
-    margin-bottom: 25px;
-}
-
-
-
-.edu-year {
-    display: block;
-    color: #ff004f;
-    margin-bottom: 4px;
-}
-
-.edu-school {
-    margin-bottom: 5px;
-    font-weight: 600;
-}
-
-
 
 .about-titles {
     display: flex;
@@ -236,6 +199,47 @@ nav ul li a:hover::after {
     color: #b54769;
     font-size: 14px;
 }
+
+
+#skills li {
+    margin-bottom: 20px;
+}
+
+
+#skills li span {
+    font-size: 20px;
+}
+
+#skills li p {
+    font-size: 18px;
+    margin-top: 4px;
+}
+
+
+#experience li span {
+    font-size: 20px;
+    margin-top: 4px;
+}
+
+#experience li p {
+    font-size: 18px;
+    margin-top: 4px;
+    margin-bottom: 20px;
+}
+
+#education li {
+    margin-bottom: 30px;
+}
+
+#education li span {
+    font-size: 20px;
+}
+
+#education li p {
+    margin-bottom: 4px;
+    font-size: 18px;
+}
+
 
 /* -----------------services----------- */
 
@@ -321,7 +325,7 @@ nav ul li a:hover::after {
     align-items: center;
     justify-content: flex-start;
     text-align: center;
-    padding: 50px 20px 80px;
+    padding: 20px 20px 30px;
 }
 
 
@@ -333,11 +337,12 @@ nav ul li a:hover::after {
 .layer p {
     text-align: justify;
     line-height: 1.5;
+    font-size: 17px;
 }
 
 .layer a {
     position: absolute;
-    bottom: 10%;
+    bottom: 15px;
     margin-top: 20px;
     text-decoration: none;
     line-height: 60px;
@@ -351,7 +356,7 @@ nav ul li a:hover::after {
 
 
 .work-item img {
-    width: 100%;
+    width: 80%;
     display: block;
     border-radius: 10px;
 }
@@ -502,70 +507,154 @@ nav .fa-solid {
 
 /*-- ---------------css responsive for small screen------------------- */
 
-/* mobile phone */
-@media (max-width: 576px) {
+/* large tablet */
+@media (max-width: 1200px) {
 
-
-    .logo {
-        font-size: 30px;
-        padding: 8px;
+    nav {
+        margin-top: 10px;
     }
 
-     .header-text {
-        margin-top: 280px;
+    .logo {
+        font-size: 32px;
+    }
+
+    nav ul li {
+        margin: 10px 15px;
+    }
+
+    nav ul li a {
+        font-size: 18px;
+    }
+
+    .header-text {
+        margin-top: 360px;
     }
 
     .header-text p {
-        font-size: 20px;
-        margin-bottom: 20px;
+        font-size: 28px;
     }
 
     .header-text h1 {
-        font-size: 25px;
+        font-size: 33px;
     }
 
-    nav ul {
-        position: fixed;
-        right: -200px;
-        top: 0;
-        height: 100vh;
-        background: #d80548;
-        width: 200px;
-        padding-top: 50px;
-        z-index: 2;
-        transition: right 0.5s;
+    .sub-title {
+        font-size: 34px;
+    }
+
+
+    #skills li span {
+        font-size: 20px;
+    }
+
+    #skills li p {
+        font-size: 18px;
+    }
+
+
+    #experience li span {
+        font-size: 20px;
+    }
+
+    #experience li p {
+        font-size: 18px;
+    }
+
+    #education li span {
+        font-size: 20px;
+    }
+
+    #education li p {
+        margin-bottom: 4px;
+        font-size: 18px;
+    }
+
+
+    .work-item {
+        width: 100%;
+        margin: 20px auto 30px auto;
+    }
+
+    .work-item img {
+        width: 100%;
+        display: block;
+        border-radius: 10px;
+    }
+
+    .left {
+        flex-basis: 40%;
+    }
+
+    .right {
+        flex-basis: 55%;
+    }
+
+    .left p {
+        margin-top: 30px;
+    }
+
+    .left p i {
+        font-size: 25px;
+        color: #d80548;
+        margin-right: 8px;
+    }
+
+
+
+
+    .btn1 {
+        width: 60%;
+        font-size: 14px;
+        font-weight: 800;
+    }
+
+    .btn2 {
+        width: 50%;
+        font-size: 16px;
+        font-weight: 800;
+    }
+
+
+}
+
+
+/* large tablet */
+@media (max-width: 992px) {
+
+    .container {
+        padding: 0px 7%;
     }
 
     nav {
         margin-top: 10px;
     }
 
-    nav ul li {
-        display: block;
-        margin: 15px 20px;
+    .logo {
+        font-size: 30px;
     }
 
+    nav ul li {
+        margin: 10px 10px;
+    }
 
     nav ul li a {
-        font-size: 14px;
+        font-size: 17px;
     }
 
-    nav ul .fa-solid {
-        position: absolute;
-        top: 20px;
-        left: 25px;
-        cursor: pointer;
+    .header-text {
+        margin-top: 360px;
     }
 
-    nav .fa-solid {
-        display: block;
+    .header-text p {
         font-size: 25px;
-        cursor: pointer;
+    }
+
+    .header-text h1 {
+        font-size: 30px;
     }
 
     .sub-title {
-        font-size: 30px;
-        margin-bottom: 20px;
+        font-size: 35px;
     }
 
     .row {
@@ -574,37 +663,49 @@ nav .fa-solid {
     }
 
     .about-1 {
-        width: 100%;
-        margin: 20px auto 30px auto;
+        width: 80%;
+        margin: 0px auto;
     }
 
     .about-2 {
         width: 100%;
-        margin: 20px auto 30px auto;
+        margin-top: 60px;
+    }
+
+    .about-2 p {
+        margin: 10px auto;
     }
 
     .about-links {
-        font-size: 14px;
+        font-size: 20px;
     }
 
-    .skill-type {
-        font-size: 16px;
+
+
+    #skills li span {
+        font-size: 20px;
     }
 
-    .skill-details {
-        font-size: 14px;
-    }
-
-    .experience-title {
-        font-size: 16px;
-    }
-
-    .edu-year {
+    #skills li p {
         font-size: 18px;
     }
 
-    .edu-school {
-        font-size: 17px;
+
+    #experience li span {
+        font-size: 20px;
+    }
+
+    #experience li p {
+        font-size: 18px;
+    }
+
+    #education li span {
+        font-size: 20px;
+    }
+
+    #education li p {
+        margin-bottom: 4px;
+        font-size: 18px;
     }
 
     .work-list {
@@ -613,7 +714,7 @@ nav .fa-solid {
     }
 
     .work-item {
-        width: 100%;
+        width: 80%;
         margin: 20px auto 30px auto;
     }
 
@@ -621,7 +722,7 @@ nav .fa-solid {
 
     .btn2,
     .btn1 {
-        width: 50%;
+        width: 35%;
         text-align: center;
         padding: 12px 10px;
         font-size: 16px;
@@ -634,7 +735,6 @@ nav .fa-solid {
 }
 
 
-
 /* small tablet */
 @media (max-width: 768px) {
 
@@ -645,7 +745,7 @@ nav .fa-solid {
     }
 
     .header-text {
-        margin-top: 320px;
+        margin-top: 360px;
     }
 
     .header-text p {
@@ -717,27 +817,35 @@ nav .fa-solid {
     }
 
     .about-links {
-        font-size: 21px;
+        font-size: 20px;
     }
 
-    .skill-type {
-        font-size: 19px;
+
+
+    #skills li span {
+        font-size: 20px;
     }
 
-    .skill-details {
-        font-size: 17px;
+    #skills li p {
+        font-size: 18px;
     }
 
-    .experience-title {
-        font-size: 21px;
+
+    #experience li span {
+        font-size: 20px;
     }
 
-    .edu-year {
-        font-size: 21px;
+    #experience li p {
+        font-size: 18px;
     }
 
-    .edu-school {
-        font-size: 19px;
+    #education li span {
+        font-size: 20px;
+    }
+
+    #education li p {
+        margin-bottom: 4px;
+        font-size: 18px;
     }
 
     .work-list {
@@ -767,3 +875,142 @@ nav .fa-solid {
 }
 
 
+
+/* mobile phone */
+@media (max-width: 576px) {
+
+
+    .logo {
+        font-size: 30px;
+        padding: 8px;
+    }
+
+    .header-text {
+        margin-top: 360px;
+    }
+
+    .header-text p {
+        font-size: 20px;
+        margin-bottom: 20px;
+    }
+
+    .header-text h1 {
+        font-size: 25px;
+    }
+
+    nav ul {
+        position: fixed;
+        right: -200px;
+        top: 0;
+        height: 100vh;
+        background: #d80548;
+        width: 200px;
+        padding-top: 50px;
+        z-index: 2;
+        transition: right 0.5s;
+    }
+
+    nav {
+        margin-top: 10px;
+    }
+
+    nav ul li {
+        display: block;
+        margin: 15px 20px;
+    }
+
+
+    nav ul li a {
+        font-size: 14px;
+    }
+
+    nav ul .fa-solid {
+        position: absolute;
+        top: 20px;
+        left: 25px;
+        cursor: pointer;
+    }
+
+    nav .fa-solid {
+        display: block;
+        font-size: 25px;
+        cursor: pointer;
+    }
+
+    .sub-title {
+        font-size: 30px;
+        margin-bottom: 20px;
+    }
+
+    .row {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .about-1 {
+        width: 100%;
+        margin: 20px auto 30px auto;
+    }
+
+    .about-2 {
+        width: 100%;
+        margin: 20px auto 30px auto;
+    }
+
+    .about-links {
+        font-size: 18px;
+    }
+
+
+
+    #skills li span {
+        font-size: 18px;
+    }
+
+    #skills li p {
+        font-size: 16px;
+    }
+
+
+    #experience li span {
+        font-size: 18px;
+    }
+
+    #experience li p {
+        font-size: 16px;
+    }
+
+    #education li span {
+        font-size: 18px;
+    }
+
+    #education li p {
+        margin-bottom: 4px;
+        font-size: 16px;
+    }
+
+    .work-list {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .work-item {
+        width: 100%;
+        margin: 20px auto 30px auto;
+    }
+
+
+
+    .btn2,
+    .btn1 {
+        width: 50%;
+        text-align: center;
+        padding: 12px 10px;
+        font-size: 16px;
+        margin: 20px auto 50px auto;
+    }
+
+    #footer {
+        font-size: 14px;
+    }
+}
