--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,11 @@ body {
     padding: 0px 8%;
 }
 
+nav a {
+    text-decoration: none;
+    color: inherit;
+}
+
 nav {
     display: flex;
     align-items: center;
@@ -130,6 +135,7 @@ nav ul li a:hover::after {
 
 .about-1 img {
     width: 100%;
+    height: 100%;
     border-radius: 15px;
 }
 
@@ -139,7 +145,7 @@ nav ul li a:hover::after {
 
 .about-2 p {
     line-height: 1.8;
-    font-size: 17px;
+    font-size: 20px;
     margin-bottom: 20px;
     max-width: 520px;
     text-align: justify;
@@ -147,7 +153,7 @@ nav ul li a:hover::after {
 
 .about-3 {
     max-width: 830px;
-    margin: 50px auto 0 auto;
+    margin: 100px auto 0 auto;
     padding: 30px;
     background: #111;
     border-radius: 12px;
@@ -291,7 +297,7 @@ nav ul li a:hover::after {
 }
 
 
-/* -----------------------potfolio--------------------- */
+/* -----------------------my-work--------------------- */
 
 #portfolio {
     padding: 20px 0px;
@@ -300,15 +306,31 @@ nav ul li a:hover::after {
 
 .work-list {
     display: grid;
+    gap: 40px;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    grid-gap: 40px;
 }
+
 
 .work-item {
     border-radius: 10px;
     position: relative;
     overflow: hidden;
+    height: 500px;
+}
 
+
+.work-item img {
+    width: 100%;
+    height: 100%;
+    display: block;
+    border-radius: 10px;
+    transition: transform 0.5s ease-in-out;
+    object-fit: cover;
+}
+
+
+.work-item:hover img {
+    transform: scale(1.1);
 }
 
 .layer {
@@ -355,17 +377,6 @@ nav ul li a:hover::after {
 }
 
 
-.work-item img {
-    width: 80%;
-    display: block;
-    border-radius: 10px;
-}
-
-
-
-.work-item:hover img {
-    transform: scale(1.1);
-}
 
 
 .see_more {
@@ -507,8 +518,8 @@ nav .fa-solid {
 
 /*-- ---------------css responsive for small screen------------------- */
 
-/* large tablet */
-@media (max-width: 1200px) {
+/* Laptop */
+@media (max-width: 1140px) {
 
     nav {
         margin-top: 10px;
@@ -527,7 +538,7 @@ nav .fa-solid {
     }
 
     .header-text {
-        margin-top: 360px;
+        margin-top: 320px;
     }
 
     .header-text p {
@@ -541,6 +552,22 @@ nav .fa-solid {
     .sub-title {
         font-size: 34px;
     }
+
+    .about-1 {
+        width: 100%;
+        margin: 0px auto;
+    }
+
+    .about-1 img {
+        height: 90%;
+        width: 100%;
+        object-fit: cover;
+    }
+
+    .about-2 p {
+        font-size: 19px;
+    }
+
 
 
     #skills li span {
@@ -599,7 +626,21 @@ nav .fa-solid {
         margin-right: 8px;
     }
 
+    .work-list {
+        display: grid;
+        gap: 40px;
+        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    }
 
+    .work-item {
+        height: 450px;
+    }
+
+    .work-item img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
 
 
     .btn1 {
@@ -642,7 +683,7 @@ nav .fa-solid {
     }
 
     .header-text {
-        margin-top: 360px;
+        margin-top: 320px;
     }
 
     .header-text p {
@@ -660,20 +701,28 @@ nav .fa-solid {
     .row {
         display: flex;
         flex-direction: column;
+        align-items: center;
     }
 
     .about-1 {
-        width: 80%;
+        width: 100%;
+    }
+
+    .about-1 img {
+        display: block;
+        height: 90%;
+        width: 75%;
         margin: 0px auto;
     }
 
     .about-2 {
         width: 100%;
-        margin-top: 60px;
+        margin-top: 35px;
     }
 
     .about-2 p {
         margin: 10px auto;
+        font-size: 18px;
     }
 
     .about-links {
@@ -709,13 +758,14 @@ nav .fa-solid {
     }
 
     .work-list {
-        display: flex;
-        flex-direction: column;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-gap: 35px;
     }
 
-    .work-item {
-        width: 80%;
-        margin: 20px auto 30px auto;
+
+    .layer a {
+        margin-bottom: 8px;
     }
 
 
@@ -745,7 +795,7 @@ nav .fa-solid {
     }
 
     .header-text {
-        margin-top: 360px;
+        margin-top: 320px;
     }
 
     .header-text p {
@@ -807,13 +857,24 @@ nav .fa-solid {
     }
 
     .about-1 {
-        width: 90%;
-        margin: 20px auto 30px auto;
+        width: 100%;
+        margin: 0px auto;
     }
+
+    .about-1 img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+
 
     .about-2 {
         width: 90%;
         margin: 20px auto 30px auto;
+    }
+
+    .about-2 p {
+        font-size: 17px;
     }
 
     .about-links {
@@ -858,7 +919,9 @@ nav .fa-solid {
         margin: 20px auto 30px auto;
     }
 
-
+    .layer a {
+        margin-bottom: 25px;
+    }
 
     .btn2,
     .btn1 {
@@ -879,14 +942,13 @@ nav .fa-solid {
 /* mobile phone */
 @media (max-width: 576px) {
 
-
     .logo {
         font-size: 30px;
         padding: 8px;
     }
 
     .header-text {
-        margin-top: 360px;
+        margin-top: 320px;
     }
 
     .header-text p {
@@ -949,12 +1011,22 @@ nav .fa-solid {
 
     .about-1 {
         width: 100%;
-        margin: 20px auto 30px auto;
+        margin: 0px auto;
     }
 
-    .about-2 {
+    .about-1 img {
         width: 100%;
-        margin: 20px auto 30px auto;
+        object-fit: cover;
+    }
+
+
+    .about-2 {
+        width: 90%;
+        margin: 20px auto 20px auto;
+    }
+
+    .about-2 p {
+        font-size: 14px;
     }
 
     .about-links {
@@ -995,8 +1067,12 @@ nav .fa-solid {
     }
 
     .work-item {
-        width: 100%;
+        width: 80%;
         margin: 20px auto 30px auto;
+    }
+
+    .layer a {
+        margin-bottom: 25px;
     }
 
 
