--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ body {
 }
 
 .container {
-    padding: 0px 8%;
+    padding: 15px 8% 0px 8%;
 }
 
 nav a {
@@ -663,7 +663,7 @@ nav .fa-solid {
 @media (max-width: 992px) {
 
     .container {
-        padding: 0px 7%;
+        padding: 15px 7% 0px 7%;
     }
 
     nav {
